Spacing fix

--- a/app/app.css
+++ b/app/app.css
@@ -280,6 +280,7 @@ body>div {
   display: inline-block;
   float: left;
   list-style: none;
+  margin-left: 4px;
 }
 
 
